tests/suite/fail/generated/parser/fail_undefined_10.ny
fn main() {
    let x = y10 //~ ERROR undefined variable
}
